- Added scroll functionality to calculator dispaly   to stop text overlap

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,9 @@
     justify-content: end;
     align-items: center;
     font-family: digitaldream;
+    white-space: nowrap; 
+    overflow: scroll;
+    text-overflow: ellipsis;
     
 }
 
